[tool.poetry]
name = "tpmsc"
version = "0.1.4"
description = "CLI tool to download music collages from tapmusic.net"
authors = ["atomheartbrother <rhnsolomon@gmail.com>"]
license = "MIT"
packages = [{include = "tpmsc.py"}]

[tool.poetry.scripts]
tpmsc = 'tpmsc:main'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
