[tool.poetry]
name = "tpmsc"
version = "0.2.5"
description = "CLI tool to download music collages from tapmusic.net"
authors = ["atomheartbrother <rhnsolomon@gmail.com>"]
license = "MIT"
packages = [{include = "tpmsc.py"}]

[tool.poetry.scripts]
tpmsc = 'tpmsc:app'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
